# oauth-client

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc.json  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  RECOMMENDATIONS.md  SERVICENOW_RESULTS.md  TESTING_GUIDE.md  TUI_COMPREHENSIVE_TEST_SUITE.md  TUI_IMPLEMENTATION_PLAN.md  esbuild.config.cli.js  esbuild.config.js  esbuild.config.tui.js  eslint.config.js  jest.config.js  package.json  pnpm-lock.yaml  reset-terminal-clean.sh  reset-terminal.sh  tsconfig.json
.husky/: pre-commit
archive/overengineered-docs/: CLI_INTERACTIVE_MODE_IMPROVEMENTS.md  README.md  REMOVE_MOCK_FUNCTIONALITY.md  TESTING_GUIDE.md
archive/servicenow-docs/: SERVICENOW_CLIENT_CREDENTIALS_SOLUTION.md  SERVICENOW_FIX.md  SERVICENOW_OAUTH_INVESTIGATION.md  SERVICENOW_OJESTE_STATUS.md  SERVICENOW_PDI_STATUS.md  SERVICENOW_RESULTS.md  SERVICENOW_TOKEN_TEST_SUMMARY.md
archive/servicenow-testing/: OAUTH_TEST_PROVIDERS.md  SERVICENOW_CLIENT_CREDENTIALS_SOLUTION.md  SERVICENOW_OAUTH_FINAL_STATUS.md  SERVICENOW_SOLUTION.md  SERVICENOW_SUCCESS.md  servicenow-config.json  servicenow-login-simulator.cjs  servicenow-ojeste-config.json  servicenow-pdi-config.json  test-cli.sh  test-debug.sh  test-oauth-user.sh  test-ojeste-users.sh  test-servicenow-browser.cjs  test-servicenow-detailed.cjs  test-servicenow-final.cjs  (+10 more)
docs/: IMPLEMENTATION_PLAN.md  INSPECT_USAGE.md  OAUTH_USER_REQUIREMENTS.md  PYTHON_TEXTUAL_TUI_GUIDE.md  PYTHON_TUI_MIGRATION_PLAN.md  PYTHON_TUI_TESTING_GUIDE.md  SERVICENOW_CLIENT_CREDENTIALS_SOLUTION.md  SERVICENOW_OJESTE_STATUS.md  TOKEN_STORAGE.md  TUI_IMPLEMENTATION_PLAN.md  TUI_TERMINAL_FIX.md
examples/: get-token.sh  inspect-token.sh
python-tui/: README.md  pyproject.toml  pytest.ini  requirements.txt  reset-terminal.py  run_tests.sh
python-tui/oauth_tui/: __init__.py  __main__.py  app.py  app.py.backup  styles.css
python-tui/oauth_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-tui/oauth_tui/screens/: __init__.py  auth.py  config.py  dashboard.py  help.py  inspector.py  menu.py  tokens.py
python-tui/oauth_tui/services/: __init__.py  cli_bridge.py  oauth_client.py
python-tui/tests/: conftest.py  test_app.py  test_integration.py  test_services.py  test_snapshots.py
scripts/: check-no-mocks.js  git-status-helper.js  test-terminal-cleanup.sh
src/: index.ts
(+99 files in other folders)
